<resources>
    <string name="app_name">JordanApp</string>
    <string name="main_activity_title">Jordan Servers</string>
    <string name="clients_fragment_default_title">Jordan</string>
    <string name="tasks_fragment_default_title">Jordan</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Server List</string>
    <string name="second_fragment_label">Client List</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>
    <string name="menu_refresh">Refresh</string>
    <string name="import_server_menu">Import servers</string>
    <string name="export_server_menu">Export servers</string>
    <string name="server_refresh_failure_details">@string/details</string>
    <string name="server_refresh_failure">An error occurred while listing servers</string>
    <string name="server_refresh_failure_details_dialog">Error while listing servers</string>
    <string name="no_server_to_display">Add a server with \'+\' button</string>
    <string name="server_cannot_connect">Cannot connect</string>
    <string name="server_no_active_client">No active client</string>
    <string name="server_active_clients">%d active client(s)</string>
    <string name="server_active_task_single">1 active task</string>
    <string name="server_active_tasks">%d active tasks</string>
    <string name="server_active_tasks_progress">, %d %%</string>
    <string name="server_added">Server %s added</string>
    <string name="server_multi_added">%d servers added</string>
    <string name="server_updated">Server %s updated</string>
    <string name="server_deleted">Server %s deleted</string>
    <string name="update_server_dialog_confirm">Update</string>
    <string name="add_server_dialog_confirm">Add server</string>
    <string name="add_server_dialog_test">Try</string>
    <string name="add_server_dialog_server_name_hint">Server name… (only you will see this name)</string>
    <string name="add_server_dialog_title">Server setup</string>
    <string name="add_server_dialog_server_base_uri_hint">https://example.com/jordan/admin</string>
    <string name="update_server">Update</string>
    <string name="delete_server">Delete</string>
    <string name="delete_server_confirmation_dialog">Do you want to delete server %s ?</string>
    <string name="delete_server_confirmation_positive">Delete</string>
    <string name="delete_server_confirmation_negative">@string/cancel</string>
    <string name="server_export_confirm">Export</string>
    <string name="server_import_confirm">Import</string>
    <string name="no_server_to_export">Nothing to export. Start by adding a server</string>
    <string name="export_server_dialog_title">Select servers to export</string>
    <string name="server_exported_clipboard">%d server(s) exported to clipboard</string>
    <string name="import_server_dialog_title">Select import method</string>
    <string name="server_import_clipboard_invalid">Unreadable clipboard</string>
    <string name="server_import_failure">Server import error</string>
    <string name="server_import_failure_details">@string/details</string>
    <string name="server_import_failure_details_dialog">Error during import</string>
    <string name="server_import_clipboard_parse_error">Error while parsing clipboard</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_dialog_title">Server login</string>
    <string name="login_dialog_server">Operator account on %s</string>
    <string name="login_dialog_login_hint">login</string>
    <string name="login_dialog_password_hint">password</string>
    <string name="login_dialog_remember">Remember these credentials on this device</string>
    <string name="login_dialog_remember_unavailable">This device cannot store a password safely</string>
    <string name="login_dialog_confirm">Log in</string>
    <string name="login_retry">Retry</string>
    <string name="login_success">Logged in as %1$s (%2$s)</string>
    <string name="login_failure_credentials">Invalid login or password</string>
    <string name="logout_success">Session closed</string>
    <string name="logout_failure">Session closed on this device only : the server could not be reached</string>
    <string name="error_authentication_required">This server requires a login</string>
    <string name="error_permission_denied">Your operator role does not allow this action</string>
    <string name="client_refresh_failure_details">@string/details</string>
    <string name="client_refresh_failure">An error occurred while reading clients</string>
    <string name="client_refresh_failure_details_dialog">Error while reading clients</string>
    <string name="no_client_to_display">No client to display</string>
    <string name="client_running_task">%s running task(s)</string>
    <string name="infos_client">Information</string>
    <string name="delete_client">Delete</string>
    <string name="delete_client_confirmation_dialog">Do you want to delete client %s ?</string>
    <string name="delete_client_confirmation_dialog_message">Warning : This action is irreversible for all users ! All tasks of this client will be deleted as well.</string>
    <string name="delete_client_confirmation_positive">Delete</string>
    <string name="delete_client_confirmation_negative">@string/cancel</string>
    <string name="client_deleted">Client deleted</string>
    <string name="client_delete_failure_details">@string/details</string>
    <string name="client_delete_failure">An error occurred while deleting client</string>
    <string name="client_delete_failure_details_dialog">Error while deleting client</string>
    <string name="client_details_id">Client ID : %d</string>
    <string name="client_details_state">State : %s</string>
    <string name="client_details_no_task">No child task</string>
    <string name="client_details_task_count">Having %d child task(s)</string>
    <string name="client_details_task_details">    %d %s (state=%s)</string>
    <string name="default_task_name">Default task</string>
    <string name="client_tasks_and_actions">Tasks and Actions</string>
    <string name="client_read_status">Read Status</string>
    <string name="client_messages_state">Messages States</string>
    <string name="filter_status">Filter</string>
    <string name="filter_message">Filter</string>
    <string name="status_text_size">Font size</string>
    <string name="status_search">Search</string>
    <string name="status_settings">Display settings</string>
    <string name="status_parameters_depth">Depth :</string>
    <string name="status_parameters_auto_refresh_enable">Auto-refresh</string>
    <string name="status_parameters_auto_refresh_period_title">Period (in sec) :</string>
    <string name="status_parameters_confirm">Apply</string>
    <string name="infos_task">Information</string>
    <string name="task_details_id">Task ID : %d</string>
    <string name="task_details_state">State : %s</string>
    <string name="task_details_progress">Known progress : %d</string>
    <string name="status_details_title">Status</string>
    <string name="status_details_id">ID : %d</string>
    <string name="status_details_type">Type : %s</string>
    <string name="status_details_timestamp">Timestamp : %s</string>
    <string name="status_details_task">From task : %s</string>
    <string name="status_refresh_failure_details">@string/details</string>
    <string name="status_refresh_failure">An error occurred while reading status</string>
    <string name="status_refresh_failure_details_dialog">Error while reading status</string>
    <string name="no_status_to_display">No status to display</string>
    <plurals name="statuses_hidden_by_filters">
        <item quantity="one">The status read is hidden by the filters</item>
        <item quantity="other">The %1$d statuses read are all hidden by the filters</item>
    </plurals>
    <string name="status_type">Type</string>
    <string name="status_task">Task</string>
    <string name="status_text">Text</string>
    <string name="status_filter_text_hint">Keyword the status contains</string>
    <string name="status_filter_text_regex">Regular expression</string>
    <string name="status_filter_text_invalid">Invalid regular expression : %1$s</string>
    <string name="message_state_details_title">Message</string>
    <string name="message_state_details_id">ID : %d</string>
    <string name="message_state_details_author">Sent by : %s</string>
    <string name="message_state_details_audit">State timeline :</string>
    <string name="message_state_details_placeholders">With placeholder(s) :</string>
    <string name="message_state_details_parent_task">Target task : %s (id:%d)</string>
    <string name="message_state_details_parent_task_introduce_state_or_progress">" which was"</string>
    <string name="message_state_details_parent_task_state">" at state %s"</string>
    <string name="message_state_details_parent_task_progress">" at progress %d"</string>
    <string name="message_state_refresh_failure_details">@string/details</string>
    <string name="message_state_refresh_failure">An error occurred while reading messages</string>
    <string name="message_state_refresh_failure_details_dialog">Error while reading messages</string>
    <string name="no_message_state_to_display">No message to display</string>
    <string name="message_parent_task">Task</string>
    <string name="message_author">Author</string>
    <string name="message_state">State</string>
    <string name="client_interaction_metrics">Metrics</string>
    <string name="metrics_settings">Chart settings</string>
    <string name="metrics_settings_names">Metrics</string>
    <string name="metrics_settings_axis">X axis</string>
    <string name="metrics_settings_axis_step">Step</string>
    <string name="metrics_settings_axis_time">Time</string>
    <string name="metrics_settings_axis_step_unavailable">Step needs every value of the checked metrics to carry one</string>
    <string name="metrics_loading">Loading metrics…</string>
    <string name="no_metric_to_display">No metric sent by this task yet</string>
    <string name="no_metric_shown">No metric checked: pick some in the chart settings</string>
    <string name="metrics_refresh_failure">An error occurred while reading metrics</string>
    <string name="metrics_refresh_failure_details">@string/details</string>
    <string name="metrics_refresh_failure_details_dialog">Error while reading metrics</string>
    <string name="metric_marker">%1$s\n%2$s\n%3$s</string>
    <string name="metric_marker_step">step %1$s · %2$s</string>
    <string name="action_definitions_refresh_failure_details">@string/details</string>
    <string name="action_definitions_refresh_failure">An error occurred while reading available actions</string>
    <string name="action_definitions_refresh_failure_details_dialog">Error while reading available actions</string>
    <string name="no_action_definitions_to_display">No action to display</string>
    <string name="action_missing_mandatory_field_detail">%s (%s)</string>
    <string name="message_sent">Message sent</string>
    <string name="message_sent_details">@string/details</string>
    <string name="message_sent_id">ID : %d</string>
    <string name="message_not_sent_mandatory">Please fill all mandatory fields</string>
    <string name="message_not_sent_details">@string/details</string>
    <string name="message_not_sent_mandatory_dialog">These mandatory fields are missing</string>
    <string name="message_not_sent_failure">An error occurred while sending message</string>
    <string name="message_not_sent_failure_details">@string/details</string>
    <string name="message_not_sent_failure_details_dialog">Error while sending message</string>
</resources>