<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/refresh_status"
        app:showAsAction="never"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/status_settings"
        app:showAsAction="ifRoom"
        android:orderInCategory="80"
        android:icon="@drawable/settings"
        android:title="@string/status_settings"
        />
    <item
        android:id="@+id/filter_status"
        app:showAsAction="ifRoom"
        android:orderInCategory="60"
        android:icon="@drawable/filter"
        android:title="@string/filter_status"/>
    <item
        android:id="@+id/status_text_size"
        app:showAsAction="ifRoom"
        android:orderInCategory="40"
        android:icon="@drawable/text_size"
        android:title="@string/status_text_size"/>
    <item
        android:id="@+id/status_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="20"
        android:icon="@drawable/search"
        android:title="@string/status_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
</menu>