<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_text"
            style="@style/dialog_title"
            />

        <EditText
            android:id="@+id/status_filter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/status_filter_text_hint"
            android:inputType="text"
            android:importantForAutofill="no"
            />

        <CheckBox
            android:id="@+id/status_filter_text_regex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_filter_text_regex"
            style="@style/dialog_multi_selection_item"
            />

        <TextView
            android:id="@+id/status_filter_text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/dialog_field_error"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_type"
            style="@style/dialog_title"
            />

        <ListView
            android:id="@+id/status_filter_type_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_task"
            style="@style/dialog_title"
            />

        <ListView
            android:id="@+id/status_filter_task_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            />


    </LinearLayout>

</LinearLayout>