<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_parent_task"
            style="@style/dialog_title"
            />

        <ListView
            android:id="@+id/message_filter_task_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_author"
            style="@style/dialog_title"
            />

        <ListView
            android:id="@+id/message_filter_author_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_state"
            style="@style/dialog_title"
            />

        <ListView
            android:id="@+id/message_filter_state_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            />


    </LinearLayout>

</LinearLayout>